Update official translations from PSC

--- a/fr/index.html
+++ b/fr/index.html
@@ -54,19 +54,19 @@
 
                     <br />
 
-                    <h1 class="display-4">Appel pour les participants</h1>
+                    <h1 class="display-4">Appel de participants</h1>
                     <p class="lead">
-                        Code for Canada, en collaboration avec <a href="https://www.canada.ca/en/public-service-commission.html">Le Centre de psychologie du personnel (CPP) de la Commission de la fonction publique (CFP)</a>, sont à la recherche des employés du gouvernement fédéral de participer à une entrevue d'une sur un pour discuter de votre expérience de travail dans la fonction publique fédérale. Cela prendra environ 1 heure.
+                        Code for Canada, en collaboration avec <a href="https://www.canada.ca/en/public-service-commission.html">Le Centre de psychologie du personnel (CPP) de la Commission de la fonction publique (CFP)</a>, est à la recherche de fonctionnaires fédéraux qui souhaitent participer à une entrevue individuelle d’environ 1 heure qui portera sur leur expérience de travail à la fonction publique fédérale.
                     </p>
                     <p class="lead">
-                        Nous cherchons également à recruter des fonctionnaires pour participer à des études d'observation sur le terrain afin de mieux comprendre votre environnement de travail. Cela va prendre environ 3 heures, et un chercheur de Code for Canada vous observir.
+                        Nous cherchons également des fonctionnaires pour participer à des études d’observation sur le terrain, afin de mieux comprendre leur environnement de travail. L’étude prendra environ 3 heures, et les participants seront jumelés à un chercheur de Code for Canada.
                     </p>
                     <p class="lead">
-                        Cette recherche guidera notre orientation de produit pour la construction d'un outil moderne numérique et accessible, pour l'évaluation des candidats de gestion.
+                        Ces recherches orienteront nos travaux visant à créer un outil moderne numérique et accessible pour l’évaluation des candidats à des postes de gestion.
                     </p>
                     <hr class="my-4">
                     <p>
-                        <a href="https://codefor.ca/">Code for Canada</a> est une organisation sans but lucratif nationale qui réunit des innovateurs du gouvernement avec la communauté de la technologie et du design. Nos programmes permettent au gouvernement d’offrir des services publics numériques de meilleure qualité et de donner aux communautés les moyens de faire face à des défis d’ordre civique à l’aide de la technologie et du design.
+                        <a href="https://codefor.ca/">Code for Canada</a> est une organisation nationale sans but lucratif qui fait le lien entre les innovateurs du gouvernement et la communauté de la technologie et de la conception. Nos programmes permettent au gouvernement d’offrir des services publics numériques de grande qualité et de donner aux communautés les moyens de faire face à des défis d’ordre civique, à l’aide de la technologie et de la conception.
                     </p>
                 </div>
 
