Update french on home page

--- a/fr/index.html
+++ b/fr/index.html
@@ -99,7 +99,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">Participate</h2>
+                        <h2 class="text-center">Participer</h2>
                         <br />
                     </div>
                 </div>
@@ -107,8 +107,8 @@
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Êtes-vous un gérant?</h5>
-                                <p class="card-text">S'il vous plaît cliquer si vous avez subi le processus d'application de gestion et occupent actuellement le poste de gestionnaire.</p>
+                                <h5 class="card-title">Êtes-vous un gestionnaire?</h5>
+                                <p class="card-text">S'il vous plaît cliquer si vous avez déjà complété le processus d'application de gestion et occupez actuellement le poste de gestionnaire.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
@@ -116,8 +116,8 @@
                     <div class="col-sm-6">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">Êtes-vous un superviseur ou chef d'équipe, qui veut devenir un gérant?</h5>
-                                <p class="card-text">Cliquez s'il vous plaît si vous envisagez un poste de direction / sur le chemin de la gestion.</p>
+                                <h5 class="card-title">Êtes-vous un superviseur ou chef d'équipe, qui aimerait devenir un gestionnaire?</h5>
+                                <p class="card-text">S'il vous plaît cliquer si vous envisagez occuper un poste de direction ou si vous êtes sur le chemin de la gestion.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
