--- a/fr/volunteer-mgr.html
+++ b/fr/volunteer-mgr.html
@@ -77,7 +77,7 @@
 
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="text-center">A propos de l'étude</h2>
+                        <h2 class="text-center">À propos de l'étude</h2>
                         <br />
                     </div>
                 </div>
