exchange french word

--- a/fr/volunteer-mgr.html
+++ b/fr/volunteer-mgr.html
@@ -83,7 +83,7 @@
                 </div>
 
                 <p>
-                    Nous vous remercions de votre intérêt pour aider à développer un outil moderne et accessible à l'évaluation des candidats de gestion. Pour vous inscrire, s'il vous plaît envoyez-nous un courriel avec les informations suivantes. Le bouton ci-dessous ouvrira votre application de messagerie principale avec les questions.
+                    Nous vous remercions de votre intérêt pour aider à développer un outil moderne et accessible pour l'évaluation des candidats de gestion. Pour vous inscrire, s'il vous plaît envoyez-nous un courriel avec les informations suivantes. Le bouton ci-dessous ouvrira votre application de messagerie principale avec les questions.
                 </p>
                 <p>
                     Inclusivité et l'accessibilité sont très importants pour nous. Dans le cadre de notre recherche, notre objectif est de recueillir des informations sur, et parler à un groupe de participants qui est diversifié et représentatif des personnes qui travaillent dans la fonction publique fédérale. Ces informations resteront confidentielles et ne seront utilisées que pour assurer une participation équitable.
