Post-official translation edits update

--- a/fr/index.html
+++ b/fr/index.html
@@ -87,8 +87,8 @@
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body" style="text-align: left;">
                         <p>La Commission de la fonction publique (CFP) s'engage à protéger les renseignements personnels des individus.</p>
-                        <p>La définition de “renseignements personnel” est toute renseignements, sous quelque forme, sur une personne identifiable. Référer à l’article 3 de <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">la Lois sur la protection des renseignements personnel</a> pour plusieurs de détails à propos les renseignements personnel.</p>
-                        <p>Les données recueillies personnels que vous fournissez seront utilisés par le Centre de psychologie du personnel à des fins de recherche et de développement;, et est recueilli en vertu de l'article 11 de la Loi sur l'emploi dans la fonction publique. La communication de vos informations est volontaire et ne sera pas utilisée pour prendre des décisions administratives à votre sujet.</p>
+                        <p>La définition de “renseignements personnel” comprend les renseignements, sous quelque forme, qui peuvent rendre une personne identifiable. Référer à l’article 3 de <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">la Lois sur la protection des renseignements personnel</a> pour plus de détails à propos des renseignements personnels.</p>
+                        <p>Les données recueillies que vous fournissez seront utilisées par le Centre de psychologie du personnel à des fins de recherche et de développement; et seront recueillis en vertu de l'article 11 de la Loi sur l'emploi dans la fonction publique. La communication de vos informations est volontaire et ne sera pas utilisée pour prendre des décisions administratives à votre sujet.</p>
                         <p>Les renseignements personnels sont recueillis et utilisés de la manière décrite dans les activités de sensibilisation du fichier de renseignements personnels standard du <a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/acces-information-protection-reseignements-personnels/acces-information/renseignements-programmes-fonds-renseignements/fichiers-renseignements-personnels-ordinaires.html">Secrétariat du Conseil du Trésor (PSU 938)</a></p>
                         <p>Les individus ont le droit de déposer une plainte auprès du <a href="https://www.priv.gc.ca/index_e.asp">commissaire du Canada protection des renseignements personnels</a> au sujet de la gestion du ministère de leurs renseignements personnels.</p>
                     </div>
@@ -108,7 +108,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Êtes-vous un gestionnaire?</h5>
-                                <p class="card-text">S'il vous plaît cliquer si vous avez déjà complété le processus d'application de gestion et occupez actuellement le poste de gestionnaire.</p>
+                                <p class="card-text">S'il vous plaît cliquer si vous avez déjà complété le processus d'application de gestion et occupez actuellement un poste de gestionnaire.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
