--- a/fr/index.html
+++ b/fr/index.html
@@ -54,19 +54,19 @@
 
                     <br />
 
-                    <h1 class="display-4">Appel de participants</h1>
+                    <h1 class="display-4">Appel à la participation</h1>
                     <p class="lead">
-                        Code for Canada, en collaboration avec <a href="https://www.canada.ca/en/public-service-commission.html">Le Centre de psychologie du personnel (CPP) de la Commission de la fonction publique (CFP)</a>, est à la recherche de fonctionnaires fédéraux qui souhaitent participer à une entrevue individuelle d’environ 1 heure qui portera sur leur expérience de travail à la fonction publique fédérale.
+                        Code for Canada, en collaboration avec <a href="https://www.canada.ca/en/public-service-commission.html">le Centre de psychologie du personnel (CPP) de la Commission de la fonction publique (CFP)</a>, est à la recherche de fonctionnaires fédéraux qui souhaitent participer à une entrevue individuelle d’environ 1 heure qui portera sur leur expérience de travail à la fonction publique fédérale.
                     </p>
                     <p class="lead">
-                        Nous cherchons également des fonctionnaires pour participer à des études d’observation sur le terrain, afin de mieux comprendre leur environnement de travail. L’étude prendra environ 3 heures, et les participants seront jumelés à un chercheur de Code for Canada.
+                        Nous cherchons également des fonctionnaires pour participer à des études d’observation sur le terrain, afin de mieux comprendre leur environnement de travail. Cela prendra environ 3 heures et les participants seront jumelés à un chercheur de Code for Canada.
                     </p>
                     <p class="lead">
-                        Ces recherches orienteront nos travaux visant à créer un outil moderne numérique et accessible pour l’évaluation des candidats à des postes de gestion.
+                        Ces recherches orienteront nos travaux, lesquels visent à créer un outil moderne, numérique et accessible pour l’évaluation des candidats à des postes de gestion.
                     </p>
                     <hr class="my-4">
                     <p>
-                        <a href="https://codefor.ca/">Code for Canada</a> est une organisation nationale sans but lucratif qui fait le lien entre les innovateurs du gouvernement et la communauté de la technologie et de la conception. Nos programmes permettent au gouvernement d’offrir des services publics numériques de grande qualité et de donner aux communautés les moyens de faire face à des défis d’ordre civique, à l’aide de la technologie et de la conception.
+                        <a href="https://codefor.ca/">Code for Canada</a> est une organisation nationale sans but lucratif qui fait le lien entre les innovateurs du gouvernement et la communauté de la technologie et de la conception. Nos programmes permettent au gouvernement d’offrir des services publics numériques de grande qualité et de donner aux communautés les moyens de faire face à des défis d’ordre civique, et ce, à l’aide de la technologie et de la conception.
                     </p>
                 </div>
 
@@ -87,10 +87,10 @@
                 <div class="collapse" id="collapseExample">
                     <div class="card card-body" style="text-align: left;">
                         <p>La Commission de la fonction publique (CFP) s'engage à protéger les renseignements personnels des individus.</p>
-                        <p>La définition de “renseignements personnel” comprend les renseignements, sous quelque forme, qui peuvent rendre une personne identifiable. Référer à l’article 3 de <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">la Lois sur la protection des renseignements personnel</a> pour plus de détails à propos des renseignements personnels.</p>
-                        <p>Les données recueillies que vous fournissez seront utilisées par le Centre de psychologie du personnel à des fins de recherche et de développement; et seront recueillis en vertu de l'article 11 de la Loi sur l'emploi dans la fonction publique. La communication de vos informations est volontaire et ne sera pas utilisée pour prendre des décisions administratives à votre sujet.</p>
-                        <p>Les renseignements personnels sont recueillis et utilisés de la manière décrite dans les activités de sensibilisation du fichier de renseignements personnels standard du <a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/acces-information-protection-reseignements-personnels/acces-information/renseignements-programmes-fonds-renseignements/fichiers-renseignements-personnels-ordinaires.html">Secrétariat du Conseil du Trésor (PSU 938)</a></p>
-                        <p>Les individus ont le droit de déposer une plainte auprès du <a href="https://www.priv.gc.ca/index_e.asp">commissaire du Canada protection des renseignements personnels</a> au sujet de la gestion du ministère de leurs renseignements personnels.</p>
+                        <p>La définition de “renseignements personnels” comprend toute information, sous quelque forme que ce soit, qui peut rendre une personne identifiable. Pour plus de détails à propos des renseignements personnels, veuillez vous référer à l’article 3 de <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/">la Loi sur la protection des renseignements personnels</a></p>
+                        <p>Les données que vous fournissez seront utilisées par le Centre de psychologie du personnel à des fins de recherche et de développement et sont recueillies conformément à l'article 11 de la Loi sur l'emploi dans la fonction publique. La communication de vos informations personnelles est volontaire. Vos informations ne seront pas utilisées pour prendre des décisions administratives à votre sujet.</p>
+                        <p>Les renseignements personnels sont recueillis et utilisés de la manière décrite dans la description des fichiers de renseignements personnels ordinaires du <a href="https://www.canada.ca/fr/secretariat-conseil-tresor/services/acces-information-protection-reseignements-personnels/acces-information/renseignements-programmes-fonds-renseignements/fichiers-renseignements-personnels-ordinaires.html">Secrétariat du Conseil du Trésor - activités de sensibilisation (PSU POU 938)</a></p>
+                        <p>Toute personne a le droit de déposer une plainte auprès du <a href="https://www.priv.gc.ca/index_e.asp">Commissariat à la protection de la vie privée du Canada</a> au sujet de la gestion du ministère de leurs renseignements personnels.</p>
                     </div>
                 </div>
 
@@ -108,7 +108,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Êtes-vous un gestionnaire?</h5>
-                                <p class="card-text">S'il vous plaît cliquer si vous avez déjà complété le processus d'application de gestion et occupez actuellement un poste de gestionnaire.</p>
+                                <p class="card-text">Veuillez plaît cliquer si vous avez déjà complété un processus de demande d’emploi pour un poste de gestion et que vous occupez actuellement un poste de gestionnaire.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">Êtes-vous un superviseur ou chef d'équipe, qui aimerait devenir un gestionnaire?</h5>
-                                <p class="card-text">S'il vous plaît cliquer si vous envisagez occuper un poste de direction ou si vous êtes sur le chemin de la gestion.</p>
+                                <p class="card-text">Veuillez cliquer si vous envisagez occuper un poste de direction ou si vous êtes sur le point de devenir un gestionnaire.</p>
                                 <a href="./volunteer-mgr.html" class="btn btn-info">Je veux participer</a>
                             </div>
                         </div>
